html structure changes

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>
+            RESTURANT MENU
+        </title>
+    </head>
+    <body>
+        <header>
+            
+        </header>
+    </body>
     Here is some text
 </html>
