made changes to teh header image

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         <title>
-            RESTURANT MENU
+            The Bear
         </title>
     </head>
     <body>
         <header>
-            
+            <section>
+                <img id="header-img" src="" alt="Description of the image">
+
+            </section>
         </header>
     </body>
     Here is some text
