--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -9,7 +9,13 @@
         <header>
             <section>
                 <img id="header-img" src="https://resizing.flixster.com/FnBvpcBCYFf3u-Kus1epWUiusDg=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p27396847_i_h9_aa.jpg" alt="Description of the image">
-
+                <h1>The BEAR</h1>
+            <nav>
+                <ul>
+                    <li> <a href="#menu">Menu</a> </li>
+                    <li> <a href="#order-form">Order-Form</a> </li>
+                </ul>
+            </nav>    
             </section>
         </header>
     </body>
