ADDED MAIN SECTION

--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -18,6 +18,14 @@
             </nav>    
             </section>
         </header>
+        <main>
+            <section>
+                <h2> MENU </h2>
+            </section>
+            <Section>
+                <h2> PLACE YOUR ORDER </h2>
+            </Section>
+        </main>
     </body>
     Here is some text
 </html>
