--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -45,7 +45,7 @@
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
                     <label>Steak and Cheese</label> <input type="number" min="0" max="3">
-                    <label> Sides</label> <input type="radio" name="sides"> Fries <br> 
+                    <label> Sides</label> <input type="radio" name="sides"> Fries
                     <label> Sides</label> <input type="radio" name="sides"> Onion Rings <br> 
                 </form>
             </Section>
