--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -46,7 +46,9 @@
                 <form>
                     <label>Steak and Cheese</label> <input type="number" min="0" max="3">
                     <label> Sides</label> <input type="radio" name="sides"> Fries
-                    <label> Sides</label> <input type="radio" name="sides"> Onion Rings <br> 
+                    <label> Sides</label> <input type="radio" name="sides"> Onion Rings
+                    <label> Sides</label> <input type="radio" name="drinks"> Water
+                    <label> Sides</label> <input type="radio" name="drinks"> Juice
                 </form>
             </Section>
         </main>
