--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -44,11 +44,11 @@
             <Section>
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
-                    <label>Steak and Cheese</label> <input type="number" min="0" max="3">
-                    <label> Sides</label> <input type="radio" name="sides"> Fries
-                    <label> Sides</label> <input type="radio" name="sides"> Onion Rings
-                    <label> Sides</label> <input type="radio" name="drinks"> Water
-                    <label> Sides</label> <input type="radio" name="drinks"> Juice
+                    <label><h3>Steak and Cheese</h3></label> <input type="number" min="0" max="3">
+                    <label> Sides</label><input type="radio" name="sides"> Fries
+                    <label> Sides</label><input type="radio" name="sides"> Onion Rings
+                    <label> Sides</label><input type="radio" name="drinks"> Water
+                    <label> Sides</label><input type="radio" name="drinks"> Juice
                 </form>
             </Section>
         </main>
