fixed the labels i think

--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -45,10 +45,10 @@
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
                     <label><h3>Steak and Cheese</h3></label> <input type="number" min="0" max="3">
-                    <label> Sides</label><input type="radio" name="sides"> Fries
-                    <label> Sides</label><input type="radio" name="sides"> Onion Rings
-                    <label> Sides</label><input type="radio" name="drinks"> Water
-                    <label> Sides</label><input type="radio" name="drinks"> Juice
+                    <label> Fries</label><input type="radio" name="sides">
+                    <label> Onion Rings</label><input type="radio" name="sides">
+                    <label> Water</label><input type="radio" name="drinks">
+                    <label> Juice </label><input type="radio" name="drinks"> 
                 </form>
             </Section>
         </main>
