fixed steak and cheese number

--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -44,7 +44,7 @@
             <Section>
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
-                    <label><h3>Steak and Cheese</h3></label> <input type="number" min="0" max="3">
+                    <label>Steak and Cheese</label> <input type="number" min="0" max="3">
                     <label> Fries</label><input type="radio" name="sides">
                     <label> Onion Rings</label><input type="radio" name="sides">
                     <label> Water</label><input type="radio" name="drinks">
