--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -44,9 +44,23 @@
             <Section>
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
-                    <label>Steak and Cheese</label> <input type="number" min="0" max="3">
+                    <label>STEAK AND CHEESE</label> <input type="number" min="0" max="3">
                     <label> Fries</label><input type="radio" name="sides">
                     <label> Onion Rings</label><input type="radio" name="sides">
+                    <label> Water</label><input type="radio" name="drinks">
+                    <label> Juice </label><input type="radio" name="drinks"> 
+                </form>
+                <form>
+                    <label>FETTUCCINE ALFREDO PASTA</label> <input type="number" min="0" max="3">
+                    <label> breadsticks</label><input type="radio" name="sides">
+                    <label> cheesebread sticks</label><input type="radio" name="sides">
+                    <label> Water</label><input type="radio" name="drinks">
+                    <label> Juice </label><input type="radio" name="drinks"> 
+                </form>
+                                <form>
+                    <label>CHICKEN CAESAR SALAD</label> <input type="number" min="0" max="3">
+                    <label> breadsticks</label><input type="radio" name="sides">
+                    <label> cheesebread sticks</label><input type="radio" name="sides">
                     <label> Water</label><input type="radio" name="drinks">
                     <label> Juice </label><input type="radio" name="drinks"> 
                 </form>
