--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -49,15 +49,15 @@
                     <label> Onion Rings</label><input type="radio" name="sides">
                     <label> Water</label><input type="radio" name="drinks">
                     <label> Juice </label><input type="radio" name="drinks"> 
-                </form>
+                </form><br><br>
                 <form>
                     <label>FETTUCCINE ALFREDO PASTA</label> <input type="number" min="0" max="3">
                     <label> breadsticks</label><input type="radio" name="sides">
                     <label> cheesebread sticks</label><input type="radio" name="sides">
                     <label> Water</label><input type="radio" name="drinks">
                     <label> Juice </label><input type="radio" name="drinks"> 
-                </form>
-                                <form>
+                </form><br><br>
+                 <form>
                     <label>CHICKEN CAESAR SALAD</label> <input type="number" min="0" max="3">
                     <label> breadsticks</label><input type="radio" name="sides">
                     <label> cheesebread sticks</label><input type="radio" name="sides">
