--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -44,21 +44,21 @@
             <Section>
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
-                    <label>STEAK AND CHEESE</label> <input type="number" min="0" max="3">
+                    <label>STEAK AND CHEESE</label> <input type="number" min="0" max="3"><br>
                     <label> Fries</label><input type="radio" name="sides"><br>
                     <label> Onion Rings</label><input type="radio" name="sides"><br>
                     <label> Water</label><input type="radio" name="drinks"><br>
                     <label> Juice </label><input type="radio" name="drinks"> 
                 </form><br><br>
                 <form>
-                    <label>FETTUCCINE ALFREDO PASTA</label> <input type="number" min="0" max="3">
+                    <label>FETTUCCINE ALFREDO PASTA</label> <input type="number" min="0" max="3"><br>
                     <label> breadsticks</label><input type="radio" name="sides"><br>
                     <label> cheesebread sticks</label><input type="radio" name="sides"><br>
                     <label> Water</label><input type="radio" name="drinks"><br>
                     <label> Juice </label><input type="radio" name="drinks"> 
                 </form><br><br>
                  <form>
-                    <label>CHICKEN CAESAR SALAD</label> <input type="number" min="0" max="3">
+                    <label>CHICKEN CAESAR SALAD</label> <input type="number" min="0" max="3"><br>
                     <label> breadsticks</label><input type="radio" name="sides"><br>
                     <label> cheesebread sticks</label><input type="radio" name="sides"><br>
                     <label> Water</label><input type="radio" name="drinks"><br>
