--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -62,7 +62,8 @@
                     <label> breadsticks</label><input type="radio" name="sides"><br>
                     <label> cheesebread sticks</label><input type="radio" name="sides"><br>
                     <label> Water</label><input type="radio" name="drinks"><br>
-                    <label> Juice </label><input type="radio" name="drinks"> 
+                    <label> Juice </label><input type="radio" name="drinks"> <br>
+                    <textarea maxlength="250"></textarea>
                 </form>
             </Section>
         </main>
