--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -62,8 +62,9 @@
                     <label> breadsticks</label><input type="radio" name="sides"><br>
                     <label> cheesebread sticks</label><input type="radio" name="sides"><br>
                     <label> Water</label><input type="radio" name="drinks"><br>
-                    <label> Juice </label><input type="radio" name="drinks"> <br>
-                    <textarea maxlength="250"></textarea>
+                    <label> Juice </label><input type="radio" name="drinks"> <br> <br>
+                    <textarea maxlength="250" placeholder="Special Request"></textarea><br><br>
+                    <input type="submit" value="Go To Checkout">
                 </form>
             </Section>
         </main>
