--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -70,6 +70,11 @@
                 </form>
             </Section>
         </main>
+        <footer>
+            <p>
+                Made with love bt Allenagc
+            </p>
+        </footer>
     </body>
-    Here is some text
+    
 </html>
