--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -72,7 +72,7 @@
         </main>
         <footer>
             <p>
-                Made with love bt Allenagc
+                <i>Made with love by Allenagc</i>
             </p>
         </footer>
     </body>
