--- a/CODEDEXHTMLPROJECT.html
+++ b/CODEDEXHTMLPROJECT.html
@@ -19,7 +19,7 @@
             </section>
         </header>
         <main>
-            <section id=#menu>
+            <section id=menu>
                 <h2> MENU </h2>
                 <ARTICLE>
                     <h3>STEAK AND CHEESE</h3>
@@ -41,7 +41,7 @@
                     <p>Chicken Ceasar Salad with coutons, bacon and cheese. You can change the protien to steak or shrimp.</p><br>
                     <i>$13.99</i>
             </section>
-            <Section id="#order-form">
+            <Section id="order-form">
                 <h2> PLACE YOUR ORDER </h2>
                 <form>
                     <label>STEAK AND CHEESE</label> <input type="number" min="0" max="3"><br>
